Opened 11 years ago

Closed 11 years ago

Last modified 11 years ago

#4751 closed defect (fixed)

Transcode to ffv1 generate error.

Reported by: peio Owned by:
Priority: important Component: avcodec
Version: 2.7 Keywords: ffv1 regression crash abort
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: yes

Description

$ ffmpeg -i test.m2ts -c:v ffv1 -an -sn test.mkv
ffmpeg version 2.7.2-1 Copyright (c) 2000-2015 the FFmpeg developers

built with gcc 4.9.3 (Debian 4.9.3-2)
configuration: --prefix=/usr --extra-version=1 --build-suffix=-ffmpeg --toolchain=hardened --libdir=/usr/lib/x86_64-linux-gnu --incdir=/usr/include/x86_64-linux-gnu --enable-gpl --enable-shared --disable-stripping --enable-avresample --enable-avisynth --enable-frei0r --enable-gnutls --enable-ladspa --enable-libass --enable-libbluray --enable-libbs2b --enable-libcaca --enable-libcdio --enable-libflite --enable-libfontconfig --enable-libfreetype --enable-libfribidi --enable-libgme --enable-libgsm --enable-libmodplug --enable-libmp3lame --enable-libopenjpeg --enable-openal --enable-libopus --enable-libpulse --enable-librtmp --enable-libschroedinger --enable-libshine --enable-libspeex --enable-libtheora --enable-libtwolame --enable-libvorbis --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libxvid --enable-libzvbi --enable-opengl --enable-x11grab --enable-libdc1394 --enable-libiec61883 --enable-libzmq --enable-libssh --enable-libsoxr --enable-libx264 --enable-libopencv --enable-libx265
libavutil 54. 27.100 / 54. 27.100
libavcodec 56. 41.100 / 56. 41.100
libavformat 56. 36.100 / 56. 36.100
libavdevice 56. 4.100 / 56. 4.100
libavfilter 5. 16.101 / 5. 16.101
libavresample 2. 1. 0 / 2. 1. 0
libswscale 3. 1.101 / 3. 1.101
libswresample 1. 2.100 / 1. 2.100
libpostproc 53. 3.100 / 53. 3.100

Input #0, mpegts, from '20150705072020.m2ts':

Duration: 00:00:09.38, start: 1.040000, bitrate: 16859 kb/s
Program 1

Stream #0:0[0x1011]: Video: h264 (High) (HDMV / 0x564D4448), yuv420p, 1920x1080 [SAR 1:1 DAR 16:9], 25 fps, 25 tbr, 90k tbn, 50 tbc
Stream #0:1[0x1100]: Audio: ac3 (AC-3 / 0x332D4341), 48000 Hz, stereo, fltp, 256 kb/s
Stream #0:2[0x1200]: Subtitle: hdmv_pgs_subtitle ([144][0][0][0] / 0x0090), 1920x1080

Assertion s->bits_per_raw_sample >= 8 failed at libavcodec/ffv1enc.c:802

Attachments (1)

ffmpeg-20150803-213058.log (6.8 KB ) - added by peio 11 years ago.

Download all attachments as: .zip

Change History (7)

by peio, 11 years ago

Attachment: ffmpeg-20150803-213058.log added

comment:1 by Carl Eugen Hoyos, 11 years ago

Analyzed by developer: set
Component: undeterminedavcodec
Keywords: ffv1 regression crash abort added
Priority: normalimportant
Reproduced by developer: set
Status: newopen

comment:2 by Carl Eugen Hoyos, 11 years ago

Resolution: fixed
Status: openclosed

Will be fixed in release 2.7.3, thank you for the report!

comment:3 by peio, 11 years ago

:-) Thx!

comment:4 by peio, 11 years ago

Resolution: fixed
Status: closedreopened

We have version 2.8-1 Error still exist. :-(

ffmpeg -i 20150628144313.m2ts -c:v ffv1 -an -sn test.mkv
ffmpeg version 2.8-1 Copyright (c) 2000-2015 the FFmpeg developers

built with gcc 5.2.1 (Debian 5.2.1-17) 20150911
libavutil 54. 31.100 / 54. 27.100
libavcodec 56. 60.100 / 56. 41.100
libavformat 56. 40.101 / 56. 36.100
libavdevice 56. 4.100 / 56. 4.100
libavfilter 5. 40.101 / 5. 16.101
libavresample 2. 1. 0 / 2. 1. 0
libswscale 3. 1.101 / 3. 1.101
libswresample 1. 2.101 / 1. 2.100
libpostproc 53. 3.100 / 53. 3.100

Input #0, mpegts, from '20150628144313.m2ts':

Duration: 00:00:16.13, start: 1.040000, bitrate: 17164 kb/s
Program 1

Stream #0:0[0x1011]: Video: h264 (High) (HDMV / 0x564D4448), yuv420p, 1920x1080 [SAR 1:1 DAR 16:9], 25 fps, 25 tbr, 90k tbn, 50 tbc
Stream #0:1[0x1100]: Audio: ac3 (AC-3 / 0x332D4341), 48000 Hz, stereo, fltp, 256 kb/s
Stream #0:2[0x1200]: Subtitle: hdmv_pgs_subtitle ([144][0][0][0] / 0x0090), 1920x1080

Assertion s->bits_per_raw_sample >= 8 failed at libavcodec/ffv1enc.c:802

comment:5 by peio, 11 years ago

Resolution: needs_more_info
Status: reopenedclosed

I noticed that I do not have an updated package libavcodec. I have to check it again. Sorry.

Last edited 11 years ago by peio (previous) (diff)

comment:6 by Carl Eugen Hoyos, 11 years ago

Resolution: needs_more_infofixed
Note: See TracTickets for help on using tickets.